# ops

./: .flake8  .gitignore  README.md
aws/: findRdsSnapshotsByOptionGroupName.sh  forceRdsMaintenance.sh  s3Retagging.py
aws/glacier/: deleteArchives.sh  listRetrievalJobs.sh  outputArchiveIds.sh  retrieveArchives.sh
b2/: upload.ps1
python/gitlab_group_fetcher/: .pre-commit-config.yaml  pyproject.toml
python/gitlab_searcher/: README.md  main.py  pyproject.toml
python/gpt-s3-log-parser/: gpt-logparser.py  gpt-logparser2.py
python/scripts/atlassian/: atlassianSpaceAuthors.py
shell/: epochDeduction.sh
terraform/: findUserAccessKeys.sh
